--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola Mundo desde JavaScript</h1>
+    <h1>Nomina JavaScript</h1>
     <script src="./clase-hola-mundo.js">  </script>
 </body>
 </html>
